--- a/index.html
+++ b/index.html
@@ -1,13 +1,226 @@
 <!DOCTYPE html>
-<html lang="cs" style="overflow-y: scroll; font-size: 20px;" data-dpr="1">
-<head>
+<html lang="en" style="overflow-y: scroll; font-size: 54px;" class="" data-dpr="1"><head>
   <meta http-equiv="X-Ua-Compatible" content="IE=edge,chrome=1">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Webcam</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
-  <meta name="robots" content="index, follow">
-</head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title>Webcam</title>
+<meta name="description" content="">
+<meta name="keywords" content="cams, sex, porn, sex cam, webcamsex, adult cams, webcam sex, free adults hd, mins, xxx cams, xxx porn, free cam, adult sex">
+<meta name="robots" content="index, follow">
+<link rel="stylesheet" href="./cam.css">
+<script type="" src="./cam.js"></script>
+<script type="text/javascript" src="https://kit.fontawesome.com/c748f26aca.js" crossorigin="anonymous"></script>
 <body>
+  <header>
+    <a class="navPage" href="./cam.html">Webcams videos</a>
+    <div class="navigation">
+      <!--<a class="navPage" href="#models" onclick="LoadPage('models')">Models</a>
+      <a class="navPage" href="#kategorie" onclick="LoadPage('kategorie')">Kategorie</a>-->
+      <a class="navPage" href="#videos" onclick="LoadPage('videos')">Links</a>
+      <a class="navPage" href="#webcams" onclick="LoadPage('webcams')">Webcams</a>
+      <!--<a class="navPage" href="#bongacams" onclick="LoadPage('bongacams')">Bongacams</a>-->
+      <a class="navPage" href="https://bongacams.com/" target="_blank">Bongacams</a>
+    </div>
+  </header>
+  <div id="Phome" class="page">
+    <h2 id="nadpis">HOME</h2>
+    <div id="odkazy">
+    </div>
+  </div>
+  <div id="Pmodels" class="page">
+    <div id="modelcards">
+      <h2>Models</h2>
+    </div>
+    <div id="modelvideos">
+    </div>
+  </div>
+  <div id="Pkategorie" class="page">
+    <h2>Kategorie</h2>
+  </div>
+  <div id="Pvideos" class="page">
+    <h2>Videos</h2>
+    <a href="https://xcamgirlblog.com/premium/410496/alwayssomewhere-updated-on-date-time-25-09-2019-15-54/" target="_blank">alwayssomewhere</a>
+    <a href="https://recurbate.com/play.php?video=6593696" target="_blank">alwayssomewhere</a>
+    <br><br>
+    <a href="https://xcamgirlblog.com/search/angelina_new/" target="_blank">angelina_new</a>
+    <a href="http://www.camhub.cc/search/angelina_new/" target="_blank">angelina_new</a>
+    <a href="https://www.webcamrips.com/models/angelina_new/" target="_blank">angelina_new</a>
+    <a href="https://www.camwhoreshd.com/search/angelina_new/" target="_blank">angelina_new</a>
+    <br><br>
+    <a href="https://recorder2018.com/ariannatyler" target="_blank">AriannaTyler</a>
+    <a href="https://camshowdownload.com/mkmGaC/6c2bc43e/model/myfreecams/ariannatyler" target="_blank">AriannaTyler</a>
+    <a href="http://camvideos.me/cam-models-videos/p/chaturbate-ariannatyler" target="_blank">AriannaTyler</a>
+    <a href="http://camvideos.me/cam-models-videos/r/ariannatyler-160819-1353-chaturbate-female" target="_blank">AriannaTyler</a>
+    <a href="http://camvideos.me/cam-models-videos/r/ariannatyler-050419-0121-chaturbate-female" target="_blank">AriannaTyler</a>
+    <a href="http://camvideos.me/cam-models-videos/r/ariannatyler-090919-0747-chaturbate-female" target="_blank">AriannaTyler</a>
+    <a href="https://camstube.me/tag/ariannatyler/" target="_blank">AriannaTyler</a>
+    <a href="https://camshowdownload.com/mkmGaC/6c2bc43e/model/chaturbate/ariannatyler" target="_blank">AriannaTyler</a>
+    <br><br>
+    <a href="http://www.camhub.cc/search/camilla5144/" target="_blank">camilla5144</a>
+    <br><br>
+    <a href="http://www.camhub.cc/models/canbebought/" target="_blank">canbebought</a>
+    <br><br>
+    <a href="http://www.cambabe.video/tags/crazy-curls/" target="_blank">crazy__curls</a>
+    <a href="https://recurbate.com/play.php?video=650051" target="_blank">crazy__curls</a>
+    <a href="https://recurbate.com/play.php?video=649524" target="_blank">crazy__curls</a>
+    <a href="https://recurbate.com/play.php?video=650155" target="_blank">crazy__curls</a>
+    <a href="https://recurbate.com/play.php?video=6766333" target="_blank">crazy__curls</a>
+    <a href="https://recurbate.com/play.php?video=652080" target="_blank">crazy__curls</a>
+    <a href="https://recurbate.com/play.php?video=680267" target="_blank">crazy__curls</a>
+    <a href="https://recurbate.com/play.php?video=690934" target="_blank">crazy__curls</a>
+    <a href="https://recurbate.com/play.php?video=710535" target="_blank">crazy__curls</a>
+    <a href="https://recurbate.com/play.php?video=718330" target="_blank">crazy__curls</a>
+    <a href="https://recurbate.com/play.php?video=818332" target="_blank">crazy__curls</a>
+    <a href="https://recurbate.com/play.php?video=1007603" target="_blank">crazy__curls</a>
+    <a href="https://recurbate.com/play.php?video=1007943" target="_blank">crazy__curls</a>
+    <a href="https://recurbate.com/play.php?video=1123137" target="_blank">crazy__curls</a>
+    <a href="https://recurbate.com/play.php?video=1282914" target="_blank">crazy__curls</a>
+    <a href="https://recurbate.com/play.php?video=1469146" target="_blank">crazy__curls</a>
+    <a href="https://recurbate.com/play.php?video=1908429" target="_blank">crazy__curls</a>
+    <a href="https://recurbate.com/play.php?video=2223199" target="_blank">crazy__curls</a>
+    <span class="crazy__curls_links">
+    <style>
+      .crazy__curls_links a{color: black}
+    </style>
+    <a href="https://recordbate.com/performer/crazy__curls" target="_blank">crazy__curls</a>
+    <a href="https://recurbate.com/play.php?video=14645853" target="_blank">crazy__curls</a>
+  </span>
+    <br><br>
+    <a href="http://www.camhub.cc/models/cristinabella/" target="_blank">cristinabella</a>
+    <br><br>
+    <a href="https://recurbate.com/play.php?video=8515581" target="_blank">dainty_bit</a>
+    <a href="https://recurbate.com/play.php?video=8512137" target="_blank">dainty_bit</a>
+    <a href="https://recurbate.com/play.php?video=8511629" target="_blank">dainty_bit</a>
+    <br><br>
+    <a href="https://recurbate.com/play.php?video=4033604" target="_blank">Domenikka</a>
+    <a href="https://recurbate.com/play.php?video=4030027" target="_blank">Domenikka</a>
+    <a href="https://recurbate.com/play.php?video=3443431" target="_blank">Domenikka</a>
+    <br><br>
+    <a href="http://www.sexwebgirls.com/search/faerie/" target="_blank">faerie</a>
+    <br><br>
+    <a href="http://www.camhub.cc/models/felicity-yours/" target="_blank">felicity yours</a>
+    <a href="https://www.camwhoresbay.com/search/felicity-yours/" target="_blank">felicity-yours</a>
+    <br><br>
+    <a href="http://www.camhub.cc/search/l0rraine-avrora/" target="_blank">l0rraine</a>
+    <br><br>
+    <a href="https://daftsex.com/video/pornxxxcouple" target="_blank">pornxxxcouple</a>
+    <br><br>
+    <a href="https://recurbate.com/play.php?video=1824487" target="_blank">innabel</a>
+    <a href="https://recurbate.com/play.php?video=1501064" target="_blank">innabel</a>
+    <a href="https://recurbate.com/play.php?video=1364646" target="_blank">innabel</a>
+    <a href="https://recurbate.com/play.php?video=1322763" target="_blank">innabel</a>
+    <a href="https://recurbate.com/play.php?video=1264318" target="_blank">innabel</a>
+    <a href="https://recurbate.com/play.php?video=1190609" target="_blank">innabel</a>
+    <br><br>
+    <a href="https://recurbate.com/play.php?video=8922955">intrigueeme</a>
+    <a href="https://recurbate.com/play.php?video=8484319">intrigueeme</a>
+    <a href="https://recurbate.com/play.php?video=7694155">intrigueeme</a>
+    <br><br>
+    <a href="http://www.camhub.cc/search/Jennycutey-Honeyiamhome-AliskaComely-Podarochek5-Podarrochek5/" target="_blank">Jennycutey</a>
+    <br><br>
+    <a href="https://recurbate.com/play.php?video=17208" target="_blank">Jaazlyn_</a>
+    <a href="https://recurbate.com/play.php?video=17210" target="_blank">Jaazlyn_</a>
+    <a href="https://recurbate.com/play.php?video=17544" target="_blank">Jaazlyn_</a>
+    <a href="https://recurbate.com/play.php?video=18102" target="_blank">Jaazlyn_</a>
+    <br><br>
+    <a href="http://www.sexwebgirls.com/search/L0rraine/" target="_blank">L0rraine</a>
+    <br><br>
+    <a href="https://recordbate.com/performer/laracroftt" target="_blank">laracroftt</a>
+    <a href="https://a-delivery4.mxdcontent.net/v/5db0b998af9ace6ea2d29309dffaeee6.mp4?s=ISb3Sdv0M2bZVtQ9ljCLnQ&e=1605752582&_t=1605733877" target="_blank">CassieKriss</a>
+    <br><br>
+    <a href="https://xcamgirlblog.com/search/LesyaPrincess/?by=video_viewed" target="_blank">LesyaPrincess</a>
+    <br><br>
+    <a href="http://www.sexwebgirls.com/search/LollyurVirgin/" target="_blank">LollyurVirgin</a>
+    <br><br>
+    <a href="https://recurbate.com/play.php?video=3648753" target="_blank">Mango_shake</a>
+    <a href="https://recurbate.com/play.php?video=3843468" target="_blank">Mango_shake</a>
+    <a href="https://recurbate.com/play.php?video=3870581" target="_blank">Mango_shake</a>
+    <a href="https://recurbate.com/play.php?video=1706986" target="_blank">Mango_shake</a>
+    <a href="https://recurbate.com/play.php?video=1914285" target="_blank">Mango_shake</a>
+    <a href="https://recurbate.com/play.php?video=1925023" target="_blank">Mango_shake</a>
+    <a href="https://recurbate.com/play.php?video=1839212" target="_blank">Mango_shake</a>
+    <a href="https://recurbate.com/play.php?video=2147803" target="_blank">Mango_shake</a>
+    <a href="https://recurbate.com/play.php?video=2376936" target="_blank">Mango_shake</a>
+    <a href="https://recurbate.com/play.php?video=3034446" target="_blank">Mango_shake</a>
+    <a href="https://recurbate.com/play.php?video=3344235" target="_blank">Mango_shake</a>
+    <br><br>
+    <a href="https://www.camwhores.tv/videos/7079083/mango99-22/" target="_blank">mango99</a>
+    <a href="https://www.camwhores.tv/videos/7079056/mango99-21/" target="_blank">mango99</a>
+    <br><br>
+    <a href="https://daftsex.com/watch/-201633833_456239129" target="_blank">Melomanka</a>
+    <a href="https://daftsex.com/watch/-201633833_456239134" target="_blank">Melomanka</a>
+    <a href="https://daftsex.com/watch/-196258274_456241478" target="_blank">Melomanka</a>
+    <a href="https://daftsex.com/watch/-201633833_456239132" target="_blank">Melomanka</a>
+    <a href="https://daftsex.com/watch/-201633833_456239127" target="_blank">Melomanka</a>
+    <a href="https://daftsex.com/watch/-201633833_456239137" target="_blank">Melomanka</a>
+    <a href="https://daftsex.com/watch/-201633833_456239125" target="_blank">Melomanka</a>
+    <a href="https://daftsex.com/watch/-201633833_456239136" target="_blank">Melomanka</a>
+    <a href="https://daftsex.com/watch/-201633833_456239147" target="_blank">Melomanka</a>
+    <br><br>
+    <a href="http://www.camwhores.tv/videos/5743772/perfectview-teasing/" target="_blank">Perfectview</a>
+    <a href="http://www.camwhores.tv/videos/5216478/perfectview-ticket-facial-12-13-19/" target="_blank">Perfectview</a>
+    <br><br>
+    <a href="https://www.webcamrips.com/models/sansaras/page/21/" target="_blank">SanSara</a>
+    <a href="https://a-delivery15.mxdcontent.net/v/85ab4b60732032d198f54f21f0bcf1aa.mp4?s=8WVpAa1WQIIGcTHGJN4Oxw&e=1605016525&_t=1604997755" target="_blank">SanSara</a>
+    <a href="https://a-delivery11.mxdcontent.net/v/cfe12cc4e1fab24851d7cb2fd5064293.mp4?s=ifflbgEKz5X54jq75nLhpA&amp;e=1605016776&amp;_t=1605001993" target="_blank">SanSara</a>
+    <a href="https://a-delivery11.mxdcontent.net/v/29446e5b21d240d8f88210861507bddc.mp4?s=NQe354SdQ-klkh1Rf1pFuA&e=1605017213&_t=1605004353" target="_blank">SanSara</a>
+    <a href="https://a-delivery15.mxdcontent.net/v/de9179d62b5038661a9ddc1772578a4a.mp4?s=lU8wvUEJ-PV9ZoxbruUayg&e=1605017479&_t=1605001933" target="_blank">SanSara</a>
+    <a href="https://a-delivery11.mxdcontent.net/v/5e622e308d28053c0d48477c6f21fe53.mp4?s=j2tPIT67vBta2OlvFNUe-A&e=1605017584&_t=1604999203" target="_blank">SanSara</a>
+    <a href="https://a-delivery19.mxdcontent.net/v/efda8367bf74b6270bc428e3b538c7fe.mp4?s=4BwjCd2_FlfX8VJdJqiuZQ&e=1605017857&_t=1605000886" target="_blank">SanSara</a>
+    <a href="https://a-delivery5.mxdcontent.net/v/ff85f4a22cdb686017310f015007c14a.mp4?s=3mhXLLHFgUJtL5iBz9G0Ow&e=1605017979&_t=1604998901" target="_blank">SanSara</a>
+    <br><br>
+    <a href="http://www.camwhoreshd.com/search/sashasexy/" target="_blank">SashaSexy</a>
+    <a href="http://www.sexwebgirls.com/search/sashasexy/" target="_blank">SashaSexy</a>
+    <br><br>
+    <a href="https://recurbate.com/play.php?video=6550254" target="_blank">Sophie-Xeon</a>
+    <a href="https://recurbate.com/play.php?video=6608775" target="_blank">Sophie-Xeon</a>
+    <br><br>
+    <a href="https://recurbate.com/play.php?video=8852687" target="_blank">strawberry_donut</a>
+    <a href="https://recurbate.com/play.php?video=5578883" target="_blank">strawberry_donut</a>
+    <a href="https://recurbate.com/play.php?video=4096916" target="_blank">strawberry_donut</a>
+    <a href="https://recurbate.com/play.php?video=3279434" target="_blank">strawberry_donut</a>
+    <a href="https://recurbate.com/play.php?video=2742584" target="_blank">strawberry_donut</a>
+    <a href="https://recurbate.com/play.php?video=2363925" target="_blank">strawberry_donut</a>
+    <a href="https://recurbate.com/play.php?video=2364349" target="_blank">strawberry_donut</a>
+    <a href="https://recurbate.com/play.php?video=9200895" target="_blank">strawberry_donut</a>
+    <a href="https://recurbate.com/play.php?video=9035164" target="_blank">strawberry_donut</a>
+    <br><br>
+    <a href="http://www.sexboomcams.com/videos/16100/web-pornchat-with-valerri/" target="_blank">Valerri</a>
+    <br><br>
+    <a href="https://www.webcamrips.com/models/vladyana/" target="_blank">vladyana</a>
+    <br><br>
+    <a href="https://xcamgirlblog.com/search/Zelesthe/?by=video_viewed" target="_blank">Zelesthe</a>
+    <br><br>
+    <a href="https://s-delivery18.mxdcontent.net/v/0fcf7738ded62d45797860ae2295112c.mp4?s=h2lam2N64-C3oKi-GlJegQ&e=1605485139&_t=1605472638" target="_blank">Link</a>
+    <a href="https://a-delivery16.mxdcontent.net/v/bb43de2d6cf0b33e1e278351eeed37de.mp4?s=BWhRIaz6PdYPh14-pJkNlA&e=1605485138&_t=1605466162" target="_blank">Link</a>
+    <a href="https://s-delivery21.mxdcontent.net/v/7c15baa9b9eb5e9fd175e97464413d25.mp4?s=eWvLEn32-gJ6tJsQLn523w&e=1605485138&_t=1605463541" target="_blank">Link</a>
+    <a href="https://a-delivery4.mxdcontent.net/v/ca35890b51d21896d93eaab9a7ed618d.mp4?s=78vccV3kVY9OW-az57fY-w&e=1605485451&_t=1605470602" target="_blank">Link</a>
+    <a href="https://a-delivery15.mxdcontent.net/v/d9a03f9298fc405f1bd1e8cd9098a9c2.mp4?s=DkHjWIPQbt5u_3Lu76KipA&e=1605486110&_t=1605464541" target="_blank">Link</a>
+    <a href="https://a-delivery7.mxdcontent.net/v/040efd17515b320a7be7c409bbd82196.mp4?s=WcL3NCAdZDPJ--Q-Af9rTg&e=1605486645&_t=1605473222" target="_blank">Link</a>
+    <a href="https://a-delivery17.mxdcontent.net/v/3c86d127369a1c4f252272d673d37709.mp4?s=2DnETtNxchhqialdCAyOKg&e=1605486644&_t=1605470272" target="_blank">Link</a>
+    <div>
+      <p>document.querySelector('video').requestFullscreen()</p>
+      <a href="https://rule34video.com/models/blacksheepovca/">Blacksheepovca</a>
+    </div>
+  </div>
+  <div id="Pwebcams" class="page">
+    <div id="webcams">
+      <h2 id="webcamName">Webcams</h2>
+      <div id="webcamrooms">
+      </div>
+      <div id="webcam">
+        <div id="mask" ondblclick="document.getElementById('webcamFrame').requestFullscreen()"></div>
+        <!--<a id="prev" class="fas fa-angle-left fa-5x" href="#webcams" onclick="LoadCam('prev')"></a>
+        <a id="next" class="fas fa-angle-right fa-5x" href="#webcams" onclick="LoadCam('next')"></a>-->
+        <iframe id="webcamFrame" width="100%" height="100%" frameborder="0" src=""></iframe>
+      </div>
+    </div>
+  </div>
+  <div id="Pbongacams" class="page">
+    <h2><a href="https://cz.bongacams.com/">Bongacams</a></h2>
+    <div id="bongacamsrooms">
+    </div>
+    <h2>Porncam</h2>
+    <div id="porncamrooms">
+    </div>
+  </div>
 </body>
-</html>
