--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script type="text/javascript" src="https://kit.fontawesome.com/c748f26aca.js" crossorigin="anonymous"></script>
 <body>
   <header>
-    <a class="navPage" href="./cam.html">Webcams videos</a>
+    <a class="navPage" href="">Webcams videos</a>
     <div class="navigation">
       <!--<a class="navPage" href="#models" onclick="LoadPage('models')">Models</a>
       <a class="navPage" href="#kategorie" onclick="LoadPage('kategorie')">Kategorie</a>-->
