--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" style="overflow-y: scroll; font-size: 54px;" class="" data-dpr="1"><head>
-  <meta http-equiv="X-Ua-Compatible" content="IE=edge,chrome=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Webcam</title>
-<meta name="description" content="">
-<meta name="keywords" content="">
-<meta name="robots" content="index, follow">
-<body>
-</body>
+<html lang="en" style="overflow-y: scroll; font-size: 54px;" class="" data-dpr="1">
+  <head>
+    <meta http-equiv="X-Ua-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Webcam</title>
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="robots" content="index, follow">
+    <script type="text/javascript" src="./data.js"></script>
+  </head>
+  <body>
+  </body>
