--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="overflow-y: scroll; font-size: 54px;" class="" data-dpr="1">
+<html lang="en">
   <head>
     <meta http-equiv="X-Ua-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
