--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta http-equiv="X-Ua-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -8,6 +8,7 @@
     <meta name="keywords" content="">
     <meta name="robots" content="index, follow">
     <script type="text/javascript" src="./data.js"></script>
+    <script type="text/javascript" src="./script.js"></script>
   </head>
   <body>
     <header>
