--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="robots" content="index, follow">
     <script type="text/javascript" src="./data.js"></script>
     <script type="text/javascript" src="./script.js"></script>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <header>
