--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="./data.js"></script>
     <script type="text/javascript" src="./script.js"></script>
     <link rel="stylesheet" href="./style.css">
+    <script type="text/javascript" src="https://kit.fontawesome.com/c748f26aca.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
