--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a href="#random" onclick="var rvid=Math.floor(Math.random()*Math.random()*videos.length);loadVideo(rvid);" class="fa fa-dice-d6"></a>
       <a href="#categories" onclick="loadCategories();">Categories</a>
       <a href="#models" onclick="loadModels();">Models</a>
-      <a id="ChangePageStyle" class="fas fa-sun" style="margin-left: 20px;" onclick="ChangePageStyle();"></a>
+      <a id="ChangePageStyle" class="fas" style="margin-left: 20px;" onclick="ChangePageStyle();"></a>
     </div>
   </header>
   </body>
